# ksef2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  coverage.json  justfile  openapi.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  coverage.yml  integration-tests.yml  publish.yml  update-spec.yml
docs/: API_DOCS.md  README.md  implementing_endpoints.md  llms.txt  plan_invoice_endpoints.md  release-notes-v0.9.0.md  releasing.md
docs/architecture/: certificates-reference.md
docs/guides/: authentication.md  certificates.md  encryption.md  invoices.md  limits.md  peppol.md  permissions.md  sessions.md  testdata.md  tokens.md
examples/: create_subject.py  new_api.py  send_test_invoice.py
schemas/FA3/: schemat.xsd
scripts/: api.py  api_coverage.py  generate_test_token.py  keys.py  some_stuff.py  sync_ksef_api_version.py  sync_openapi_version.py
scripts/cli/: export_invoices.py
scripts/examples/: README.md  _common.py  demo_prepare_testdata.py  quickstart.py
src/ksef2/: __init__.py  _openapi.py  client.py  config.py  logging.py
src/ksef_sdk/: __init__.py  _auth.py  _crypto.py  _environments.py  _http.py  _sessions.py  _testdata.py  _tokens.py  _xades.py  client.py  exceptions.py
tests/: conftest.py  test_auth.py  test_crypto.py  test_http.py  test_sessions.py  test_testdata.py
tests/integration/: __init__.py  conftest.py  test_active_sessions.py  test_auth_integration.py  test_batch_session.py  test_certificates.py  test_cli_export_invoices.py  test_encryption.py  test_examples.py  test_invoices_status.py  test_limits.py  test_peppol.py  test_permissions.py  test_session_integration.py  test_session_workflow.py  test_testdata.py  test_testdata_integration.py  test_token_auth.py  test_token_lifecycle.py  test_token_refresh.py  test_xades_auth.py
tests/unit/: conftest.py  helpers.py  test_auth_endpoints.py  test_auth_mappers.py  test_auth_service.py  test_certificate_store.py  test_crypto.py  test_encryption_client.py  test_endpoints.py  test_http_errors.py  test_http_transport.py  test_invoices_mappers.py  test_invoices_query_endpoints.py  test_invoices_status_endpoints.py  test_limits_endpoints.py  test_logging.py  test_mappers.py  test_online_session_client.py  test_open_session_service.py  test_testdata_endpoints.py  test_testdata_service.py  test_token_endpoints.py  (+1 more)
(+345 files in other folders)
