[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksef2"
version = "0.7.1"
description = "Python SDK and Tools for Poland's KSeF (Krajowy System e-Faktur) API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "cryptography>=44.0.0",
    "signxml>=4.0",
    "httpx[http2]>=0.28.1",
    "structlog>=25.5.0",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "xsdata-pydantic>=24.5",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "ruff>=0.15.0",
    "pytest>=8.0",
    "respx>=0.22.0",
    "lxml-stubs>=0.5.1",
]
codegen = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "xsdata-pydantic[cli,lxml,soap]>=24.5",
    "xsdata[cli,lxml]>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the real KSeF TEST environment",
]

[tool.pyright]
exclude = ["src/ksef2/infra/schema"]
